--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,22 @@
-# JWT
 mp.jwt.verify.issuer=devhub
 smallrye.jwt.sign.key.location=privateKey.pem
+
+quarkus.http.port=8081
 
 quarkus.http.cors.enabled=true
 quarkus.http.cors.origins=http://localhost:5173
 quarkus.http.cors.headers=Authorization,Content-Type
 quarkus.http.cors.methods=GET,POST,PUT,DELETE
+
+# DATASOURCE (DEFAULT ? OBBLIGATORIO)
+quarkus.datasource.default.db-kind=postgresql
+quarkus.datasource.default.jdbc.url=jdbc:postgresql://localhost:${POSTGRES_PORT}/${POSTGRES_DB}
+quarkus.datasource.default.username=${POSTGRES_USER}
+quarkus.datasource.default.password=${POSTGRES_PASSWORD}
+quarkus.datasource.default.devservices.enabled=false
+
+
+# DISABLE DEV SERVICES
+quarkus.datasource.devservices.enabled=false
+
+
