feat: Add Quarkus security dependency and update Hibernate ORM properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,8 @@ quarkus.datasource.default.devservices.enabled=false
 # DISABLE DEV SERVICES
 quarkus.datasource.devservices.enabled=false
 
+quarkus.hibernate-orm.schema-management.strategy=update
+quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.format-sql=true
+
 
