feat: Simplify datasource configuration and enable CORS settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,20 @@
+# JWT
 mp.jwt.verify.issuer=devhub
 smallrye.jwt.sign.key.location=privateKey.pem
 
-quarkus.http.port=8081
-
+# CORS
 quarkus.http.cors.enabled=true
 quarkus.http.cors.origins=http://localhost:5173
 quarkus.http.cors.headers=Authorization,Content-Type
 quarkus.http.cors.methods=GET,POST,PUT,DELETE
 
-# DATASOURCE (DEFAULT ? OBBLIGATORIO)
-quarkus.datasource.default.db-kind=postgresql
-quarkus.datasource.default.jdbc.url=jdbc:postgresql://localhost:${POSTGRES_PORT}/${POSTGRES_DB}
-quarkus.datasource.default.username=${POSTGRES_USER}
-quarkus.datasource.default.password=${POSTGRES_PASSWORD}
-quarkus.datasource.default.devservices.enabled=false
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:${POSTGRES_PORT:5432}/${POSTGRES_DB:devhub}
+quarkus.datasource.username=${POSTGRES_USER}
+quarkus.datasource.password=${POSTGRES_PASSWORD}
 
-
-# DISABLE DEV SERVICES
 quarkus.datasource.devservices.enabled=false
 
-quarkus.hibernate-orm.schema-management.strategy=update
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.format-sql=true
-
 
