--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ smallrye.jwt.sign.key.location=privateKey.pem
 quarkus.http.cors.enabled=true
 quarkus.http.cors.origins=http://localhost:5173
 quarkus.http.cors.headers=Authorization,Content-Type
-quarkus.http.cors.methods=GET,POST,PUT,DELETE
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
 
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:${POSTGRES_PORT:5432}/${POSTGRES_DB:devhub}
@@ -18,3 +18,5 @@ quarkus.datasource.devservices.enabled=false
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.format-sql=true
 
+quarkus.http.auth.permission.public.paths=/auth/*
+quarkus.http.auth.permission.public.policy=permit
