--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,20 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  devhub-backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: devhub-backend
+    ports:
+      - "8080:8080"
+    environment:
+      QUARKUS_DATASOURCE_JDBC_URL: jdbc:postgresql://postgres:5432/${POSTGRES_DB}
+      QUARKUS_DATASOURCE_USERNAME: ${POSTGRES_USER}
+      QUARKUS_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
+      QUARKUS_HIBERNATE_ORM_DATABASE_GENERATION: update
+    depends_on:
+      - postgres
+
 volumes:
   pgdata:
