feat: Update JWT and ORM configurations, enhance auth permissions for restricted endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # JWT
 mp.jwt.verify.issuer=devhub
+mp.jwt.verify.publickey.location=publicKey.pem
 smallrye.jwt.sign.key.location=privateKey.pem
 
 # CORS
@@ -18,5 +19,8 @@ quarkus.datasource.devservices.enabled=false
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.format-sql=true
 
-quarkus.http.auth.permission.public.paths=/auth/*
-quarkus.http.auth.permission.public.policy=permit
+quarkus.hibernate-orm.schema-management.strategy=update
+
+quarkus.http.auth.permission.authenticated.paths=/projects
+quarkus.http.auth.permission.authenticated.policy=authenticated
+quarkus.smallrye-jwt.enabled=true
