--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,18 +9,39 @@ quarkus.http.cors.origins=http://localhost:5173
 quarkus.http.cors.headers=Authorization,Content-Type
 quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
 
+# DATASOURCE
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:${POSTGRES_PORT:5432}/${POSTGRES_DB:devhub}
 quarkus.datasource.username=${POSTGRES_USER}
 quarkus.datasource.password=${POSTGRES_PASSWORD}
 
+# DEV SERVICES
 quarkus.datasource.devservices.enabled=false
 
+# HIBERNATE
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.format-sql=true
-
 quarkus.hibernate-orm.schema-management.strategy=update
 
+# AUTH
 quarkus.http.auth.permission.authenticated.paths=/projects
 quarkus.http.auth.permission.authenticated.policy=authenticated
 quarkus.smallrye-jwt.enabled=true
+
+# EMAIL
+quarkus.mailer.host=smtp.gmail.com
+quarkus.mailer.port=587
+quarkus.mailer.start-tls=REQUIRED
+
+quarkus.mailer.username=${MAIL_USERNAME}
+quarkus.mailer.password=${MAIL_PASSWORD}
+quarkus.mailer.auth-methods=LOGIN
+quarkus.mailer.from=${MAIL_USERNAME}
+quarkus.mailer.mock=false
+
+
+
+# REDIS
+quarkus.redis.hosts=${REDIS_HOST}
+quarkus.redis.password=${REDIS_PASSWORD}
+quarkus.redis.ssl=true
